exports[`<CodesplainAppBar /> snapshot tests user is logged in 1`] = `
<div>
  <AppBar
    iconElementRight={
      <AppMenu
        avatarURL=""
        gists={Array []}
        onSignOut={[Function]}
        onSnippetSelected={[Function]}
        orgSnippets={Object {}}
        userSnippets={Object {}}
        username="FooBar" />
    }
    iconStyleRight={
      Object {
        "marginTop": "16px",
      }
    }
    showMenuIconButton={false}
    style={
      Object {
        "background": "#333333",
      }
    }
    title={
      <span
        onClick={[Function]}
        style={
          Object {
            "color": "#00e6e6",
            "cursor": "pointer",
            "fontWeight": "bold",
          }
        }>
        Codesplain
      </span>
    }
    zDepth={1} />
  <Dialog
    actions={
      Array [
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Cancel"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={true} />,
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Discard"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}>
    Discard unsaved changes?
  </Dialog>
</div>
`;

exports[`<CodesplainAppBar /> snapshot tests user is not logged in 1`] = `
<div>
  <AppBar
    iconElementRight={
      <LoginButton
        onClick={[Function]} />
    }
    iconStyleRight={Object {}}
    showMenuIconButton={false}
    style={
      Object {
        "background": "#333333",
      }
    }
    title={
      <span
        onClick={[Function]}
        style={
          Object {
            "color": "#00e6e6",
            "cursor": "pointer",
            "fontWeight": "bold",
          }
        }>
        Codesplain
      </span>
    }
    zDepth={1} />
  <Dialog
    actions={
      Array [
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Cancel"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={false}
          secondary={true} />,
        <FlatButton
          disabled={false}
          fullWidth={false}
          label="Discard"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}>
    Discard unsaved changes?
  </Dialog>
</div>
`;
